[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snowshoe"
version = "0.1.4"
authors = [
  { name="Amin Fazlali", email="amin@fazlali.net" },
]
description = "A wrapper on pika"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pika==1.3.2", "retry==0.9.2"]

[project.urls]
"Homepage" = "https://github.com/fazlali/snowshoe"
"Bug Tracker" = "https://github.com/fazlali/snowshoe/issues"